--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body{
-    
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(242,250,255,1) 70%);
 }
+
 
 
